Adjust the blur quality to reduce flicker

Bug: 901433
Test: manual. See bug for repro step
Change-Id: Idd25bc0b0b0519141660b11cb7db5e67bc04122c
Reviewed-on: https://chromium-review.googlesource.com/c/1319855
Reviewed-by: Daniele Castagna <dcastagna@chromium.org>
Commit-Queue: Mitsuru Oshima <oshima@chromium.org>
Cr-Commit-Position: refs/heads/master@{#605769}
Former-commit-id: 3ac539c8ea106e1efa64e47b2f26c25392557f2b